# Knext

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py  test.py  常用api
app/api/: api.py  deps.py
app/api/v1/: configs.py  create_resource.py  namespace.py  networks.py  nodes.py  overview.py  securitys.py  storages.py  users.py  websocket.py  workloads.py
app/core/: K8sClientManager.py  config.py  database.py  k8s_client.bck.py  k8s_client.py  security.py
app/middleware/: request_id.py
app/models/: user.py  user_role.py
app/schemas/: resource_schems.py  user_schems.py
app/services/: namespace_service.py  nodes_service.py  overview_service.py  resource_service.py
app/services/configs/: configmap_service.py  secret_service.py
app/services/networks/: gateway_service.py  ingress_service.py  service_service.py
app/services/securitys/: clusterrole_service.py  clusterrolebinding_service.py  role_service.py  rolebinding_service.py  sa_service.py
app/services/storages/: pv_service.py  pvc_service.py  storageclass_service.py
app/services/users/: login_service.py  role_service.py  users_service.py
app/services/websocket/: log_service.py  terminal_service.py
app/services/workloads/: cronjob_service.py  job_service.py  (+4 more)
app/utils/: Exception.py  exceptions.py  logger.py  parse.py  response.py  response_util.py
migrations/models/: 0_20260111165549_init.py  1_20260111170152_更新字段.py  2_20260113114636_update.py  3_20260125155712_update.py  4_20260327182447_update_user_model.py  7_20260426195917_None.py  8_20260426212103_update.py
test/: k8s_test.py  user_test.py
ui/: .gitignore  package-lock.json  package.json  vite.config.js
ui/src/: components.d.ts  main.js
(+21 files in other folders)
