[project]
name = "knext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerich==0.9.2",
    "aiomysql==0.3.2",
    "aiosqlite==0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asyncclick==8.3.0.3",
    "bcrypt==3.2.2",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "dictdiffer==0.9.0",
    "durationpy==0.10",
    "ecdsa==0.19.1",
    "exceptiongroup==1.3.1",
    "fastapi==0.128.0",
    "google-auth==2.49.1",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "iso8601==2.1.0",
    "kubernetes==29.0.0",
    "logger==1.4",
    "oauthlib==3.3.1",
    "passlib==1.7.4",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pymysql==1.1.2",
    "pypika-tortoise==0.6.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "starlette==0.50.0",
    "tomli==2.3.0",
    "tomlkit==0.13.3",
    "tortoise-orm==0.25.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
]

[tool.aerich]
tortoise_orm = "app.core.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
